Use ring buffer again